service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: luit
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
