service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: luit
spec:
  selector:
    app: nginx-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
